--- a/src/features/common/styles/globals.css
+++ b/src/features/common/styles/globals.css
@@ -6,6 +6,12 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body{
+  width: 100vw;
+  min-height: 100vh;
+
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -21,6 +27,9 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background-color: black;
+    background-image: url("/gradient-right-dark.svg");
+    background-position: top center;
+    background-repeat: no-repeat;
   }
 }
