--- a/src/features/common/styles/globals.css
+++ b/src/features/common/styles/globals.css
@@ -38,5 +38,8 @@ a {
 }
 
 .Toastify__toast{
-  border-radius: 20px;
+  border-radius: 30px;
+  margin: 1em;
+  color: rgba(255,255,255,0.4);
+  min-height: auto;
 }
