--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -2,14 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-body{
-  width: 100vw;
-  min-height: 100vh;
-  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
